corrected error in .item for displaying correctly on mobile phones in style.css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,6 @@
 
 @media screen and (min-width: 800px) {
     .item{
-        flex-masis: 100%;
+        flex-basis: 100%;
     }
 }
